--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 flask
 flask-smorest
 python-dotenv
+passlib
 marshmallow
 sqlalchemy
 flask-sqlalchemy
 flask-jwt-extended
 flask-migrate
-passlib
+gunicorn
